--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -60,7 +60,7 @@
   display: flex;
   align-items: center;
   margin-top: 40px;
-  background: var(--primaryColor);
+  background: var(--primary-color);
   transition: 400ms;
   color: white;
 }
