--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -74,3 +74,15 @@
   background-color: #2FB85E;
 }
 
+/* Isso é para a classe point-created */
+#modal.point .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#modal.point h1 {
+  color: white;
+  margin-top: 32px;
+}
+
