--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,11 +8,12 @@
 
 {% block styles %}
   <link rel="stylesheet" href="/styles/create-point.css">
+  <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
   {%include "partials/page-header.html"%}
-  <form>
+  <form action="/savepoint" method="POST">
     <h1>Cadastro do ponto de coleta</h1>
 
     <fieldset>
@@ -29,11 +30,6 @@
           <label for="name">Imagem da entidae</label>
           <input type="url" name="name" placeholder="http://" required="required">
         </div>
-      </div>
-
-      <div class="field">
-        <label for="name">Nome da entidade</label>
-        <input type="text" name="name" placeholder="Digite o nome da Entidade" required="required">
       </div>
 
       <div class="field-group">
@@ -72,27 +68,27 @@
       </legend>
 
       <div class="items-grid">
-        <li data-id="1">
+        <li data-id="Lâmpadas">
           <img src="/assets/lampadas.svg" alt="lâmpadas">
           <span>Lâmpadas</span>
         </li>
-        <li data-id="2">
+        <li data-id="Pilhas e baterias">
           <img src="/assets/baterias.svg" alt="Pilhas e baterias">
           <span>Pilhas e baterias</span>
         </li>
-        <li data-id="3">
+        <li data-id="Papéis e papelão">
           <img src="/assets/papeis-papelao.svg" alt="Papéis e papelão">
           <span>Papéis e papelão</span>
         </li>
-        <li data-id="4">
+        <li data-id="Eletrônicos">
           <img src="/assets/eletronicos.svg" alt="Eletrônicos">
           <span>Eletrônicos</span>
         </li>
-        <li data-id="5">
+        <li data-id="Orgânicos">
           <img src="/assets/organicos.svg" alt="Orgânicos">
           <span>Orgânicos</span>
         </li>
-        <li data-id="6">
+        <li data-id="Óleo de cozinha">
           <img src="/assets/oleo.svg" alt="Óleo de cozinha">
           <span>Óleo de cozinha</span>
         </li>
@@ -103,7 +99,14 @@
 
     <button type="submit">Cadastrar ponto de coleta</button>
   </form>
+
 {% endblock content%}
+
+{%block modal%}
+  {% if saved %}
+    {%include "partials/point-created.html"%}
+  {% endif %}
+{%endblock modal%}}
 
 {% block scripts %}
   <script src="/scripts/create-point.js"></script>
